스택, 큐